--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Responsive portfolio website",
   "main": "index.js",
-  "homepage": "https://kanwarme.github.io/modern_portfolio",
+  "homepage": "https://github.com/Kanwarme/modern-portfolio",
   "scripts": {
     "sass": "node-sass -w scss/ -o dist/css/ --recursive",
     "deploy": "gh-pages -d dist"
@@ -21,7 +21,6 @@
   "bugs": {
     "url": "https://github.com/Kanwarme/modern-portfolio/issues"
   },
-  "homepage": "https://github.com/Kanwarme/modern-portfolio#readme",
   "dependencies": {
     "gh-pages": "^2.0.1",
     "node-sass": "^4.11.0"
